<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--Направляюшие-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <!--Логотип-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutLogo"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/guideLineVertical"
        app:layout_constraintEnd_toEndOf="@id/guideLineVertical"
        app:layout_constraintBottom_toTopOf="@id/guideLineHorizontal"
        app:layout_constraintTop_toTopOf="@id/guideLineHorizontal">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/soccerball" />

        <TextView
            android:id="@+id/textViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soccerskills"
            android:textSize="35sp" />
    </LinearLayout>

    <!--Логин аккаунта-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutAccount"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutLogo"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:id="@+id/textViewAccountFace"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/img1" />

        <EditText
            android:id="@+id/editTextAccountRegistration"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username" />
    </LinearLayout>

    <!--Пароль-->
    <LinearLayout
        android:id="@+id/linearLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutEmail"
        app:layout_constraintStart_toStartOf="@id/linearLayoutEmail"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/img2" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:layout_marginStart="5dp"
            android:hint="@string/password"/>

    </LinearLayout>

    <!--Email-->
    <LinearLayout
        android:id="@+id/linearLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutAccount"
        app:layout_constraintStart_toStartOf="@id/linearLayoutAccount"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/img3"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </LinearLayout>
    <!--Repeat Password-->
    <LinearLayout
        android:id="@+id/linearLayoutRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutPassword"
        app:layout_constraintStart_toStartOf="@id/linearLayoutPassword">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/img2" />

        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:inputType="textPassword"
            android:hint="@string/repeat_password"/>

    </LinearLayout>

    <!--Button Registration-->
    <Button
        android:id="@+id/buttonReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/create"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutRepeatPassword" />

    <TextView
        android:id="@+id/textViewBackRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/back"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReg" />


</androidx.constraintlayout.widget.ConstraintLayout>